修复 lazyload bug：在 overflow 时不可见组件加载不出来的问题。 overflow 样式不能丢。在组件中是通过 overflow 来判断是否是父组件。

--- a/src/example/lazyload.example.css
+++ b/src/example/lazyload.example.css
@@ -14,6 +14,7 @@
 .widget-list.overflow {
   position: static;
   height: 75vh;
+  overflow-x: auto;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
